--- a/api/package.json
+++ b/api/package.json
@@ -7,10 +7,14 @@
     "devstart": "nodemon app.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "knex": "^0.17.3",
+    "knex-logger": "^0.1.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
