--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.3",
     "knex": "^0.17.3",
     "knex-logger": "^0.1.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
