--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "styled-components": "^4.3.1",
     "styled-normalize": "^8.0.6"
   },
