--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-collapse": "^4.0.3",
     "react-dom": "^16.8.6",
     "react-motion": "^0.5.2",
+    "react-plotly": "^1.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
