--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "plotly.js": "^1.48.3",
+    "plotly.js": "1.48.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-motion": "^0.5.2",
-    "react-plotly.js": "^2.3.0",
+    "react-plotly.js": "2.3.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
