--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "knex": "^0.18.0",
+    "mysql": "^2.17.1",
     "plotly.js": "1.48.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
