--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "plotly.js": "1.48.3",
     "fs-extra": "^8.0.1",
+    "plotly.js": "1.48.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
     "react-motion": "^0.5.2",
     "react-plotly.js": "2.3.0",
