--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "fs-extra": "^8.0.1",
     "plotly.js": "1.48.3",
     "prop-types": "^15.7.2",
+    "query-string": "^6.8.1",
     "react": "^16.8.6",
     "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
