--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
+    "react-table": "^6.10.0",
     "react-window": "^1.8.3",
     "styled-components": "^4.3.1",
     "styled-normalize": "^8.0.6"
