Adding prop types to the plot

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-motion": "^0.5.2",
     "react-plotly.js": "2.3.0",
     "react-router-dom": "^5.0.1",
+    "react-router-prop-types": "^1.0.4",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
     "react-table": "^6.10.0",
