--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "fs-extra": "^8.0.1",
+    "lodash": "^4.17.15",
     "plotly.js": "1.48.3",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.1",
@@ -17,6 +18,7 @@
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
     "react-table": "^6.10.0",
+    "react-virtualized": "^9.21.1",
     "react-window": "^1.8.3",
     "styled-components": "^4.3.1",
     "styled-normalize": "^8.0.6"
