--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "styled-normalize": "^8.0.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
