--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.6",
     "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
+    "react-loading-components": "^1.1.12",
     "react-motion": "^0.5.2",
     "react-plotly.js": "2.3.0",
     "react-router-dom": "^5.0.1",
