--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,15 @@
     "react-loading": "^2.0.3",
     "react-motion": "^0.5.2",
     "react-plotly.js": "2.3.0",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-router-prop-types": "^1.0.4",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
     "react-table": "^6.10.0",
     "react-virtualized": "^9.21.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.3.1",
     "styled-normalize": "^8.0.6"
   },
