--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,10 +1,12 @@
 {
-    "parser": "babel-eslint",
     "env": {
         "browser": true,
         "es6": true
     },
-    "extends": "airbnb",
+    "extends": [
+        "airbnb"
+    ],
+    "parser": "babel-eslint",
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
