--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "devstart": "nodemon app.js"
+    "devstart": "nodemon app.js",
+    "postinstall": "cd client && npm i && npm build"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
