--- a/client/package.json
+++ b/client/package.json
@@ -31,8 +31,7 @@
     "start": "react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "node iisConfig/copyIISConfig.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
