--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-select": "^3.0.4",
     "react-table": "^6.10.0",
     "react-virtualized": "^9.21.1",
+    "reactjs-popup": "^1.4.2",
     "redux": "^4.0.4",
     "styled-components": "^4.3.1",
     "styled-normalize": "^8.0.6"
