--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-virtualized": "^9.21.1",
     "reactjs-popup": "^1.4.2",
     "redux": "^4.0.4",
+    "regression": "^2.0.1",
     "styled-components": "^4.3.1",
     "styled-normalize": "^8.0.6"
   },
