--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.8.1",
     "react": "^16.8.6",
+    "react-compound-slider": "^2.3.0",
     "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
     "react-loading": "^2.0.3",
