--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.3",
     "d3": "^5.9.7",
     "fs-extra": "^8.0.1",
     "lodash": "^4.17.15",
@@ -10,7 +11,6 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.8.1",
     "react": "^16.8.6",
-    "react-compound-slider": "^2.3.0",
     "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
     "react-loading": "^2.0.3",
