--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.8.1",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.11",
     "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
     "react-loading": "^2.0.3",
