--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "d3": "^5.9.7",
+    "d3-regression": "^1.2.4",
     "fs-extra": "^8.0.1",
     "lodash": "^4.17.15",
     "plotly.js": "1.48.3",
