--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "knex-logger": "^0.1.0",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
-    "opencpu": "^1.1.1"
+    "opencpu": "^1.1.1",
+    "react-csv": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
