--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.11",
     "react-countup": "^4.1.3",
+    "react-csv": "^1.1.2",
     "react-dom": "^16.8.6",
     "react-loading": "^2.0.3",
     "react-motion": "^0.5.2",
