--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-burger-menu": "^2.6.11",
     "react-countup": "^4.1.3",
     "react-csv": "^1.1.2",
+    "react-csv-downloader": "^1.4.0",
     "react-dom": "^16.8.6",
+    "react-json-to-csv": "^1.0.4",
     "react-loading": "^2.0.3",
     "react-motion": "^0.5.2",
     "react-plotly.js": "2.3.0",
