--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "acorn-dynamic-import": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
