--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.0.0",
     "express": "~4.17.1",
     "http-errors": "~1.7.2",
+    "jstat": "^1.9.2",
     "knex": "^0.17.5",
     "knex-logger": "^0.1.0",
     "morgan": "~1.9.1",
