--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.3",
     "d3": "^5.9.7",
     "fs-extra": "^8.0.1",
+    "jstat": "^1.9.2",
     "lodash": "^4.17.15",
     "plotly.js": "1.48.3",
     "prop-types": "^15.7.2",
