--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "ecmaVersion": 2018
     },
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "linebreak-style": 0
     }
 }
