--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -24,6 +24,7 @@
         "react"
     ],
     "rules": {
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "linebreak-style": 0
     }
 }
