--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "knex-logger": "^0.1.0",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
-    "opencpu": "^1.1.1",
-    "react-tabs": "^3.1.0"
+    "opencpu": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
