--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-burger-menu": "^2.6.13",
     "react-countup": "^4.3.3",
+    "react-csv": "^2.0.3",
     "react-csv-downloader": "^1.6.0",
     "react-dom": "^16.13.1",
     "react-loading": "^2.0.3",
