--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-csv": "^2.0.3",
     "react-csv-downloader": "^1.6.0",
     "react-dom": "^16.13.1",
+    "react-ga": "^2.7.0",
     "react-loading": "^2.0.3",
     "react-motion": "^0.5.2",
     "react-plotly.js": "2.3.0",
