--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devstart": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "debug": "~4.1.1",
